feature: add index.html, img/profile-image.jpg, style/

--- a/Index.html
+++ b/Index.html
@@ -1,18 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Essa é a minha pagina</title>
-</head>
-<body>
-    <h1>Esse é meu titulo 1</h1>
-    <h2>Esse é meu titulo 2</h2>
-    <h3>Esse é meu titulo 4</h4>
-    <h5>Esse é meu titulo 5</h5>
 
-    <ul>
-        <li>Esses são exemplos de itens</li>
-        <li>Esses são exemplos de itens</li>
-        <li>Esses são exemplos de itens</li>
-    </ul>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Matheus Veiga</title>
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style/style.css">
+</head>
+
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <div class="left-section-contents">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpg" alt="Profile image">
+                    <p class="name">Matheus Veiga</p>
+                    <p class="profession"> System Developer </p><br>
+                </div>
+                <hr>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+5563 912345678
+                        </li>
+                        <li><i class="fa fa-envelope"></i>matheus@gmail.com
+                        </li>
+                        <li><i class="fa fa-globe"></i>matheus.dev.com
+                        </li>
+                        <li><i class="fa fa-github"></i>mathdevjunior
+                        </li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li>
+                            <p>HTML5, CSS3</p>
+                        </li>
+                        <li>
+                            <p>Java-script, React, Nodejs</p>
+                        </li>
+                        <li>
+                            <p>PHP, SQL</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="right-section">
+            <div class="right-section-contents">
+                <!-- sobre mim -->
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá sou Matheus.<br>
+                        <br> Sou desenvolvedor de sistemas
+                        <br> e como Devjunior tenho conhecimento
+                        <br> em frontend e backend
+                    </p>
+                </section>
+                <!-- fim sobre mim -->
+
+                <!-- experiencia -->
+                <section class="experience gap">
+                    <div class="right-title"></div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="exp-company-name">Estudante</p>
+                            <p class="exp-time-period">Cursando 3° Ano de informatica para internet(IFTO)</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Developer Junior</p>
+                            <p class="exp-desc">
+                                Iniciando agora no mercado de trabalho como Dev junior.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="exp-company-name"></p>
+                            <p class="exp-time-period"></p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position"></p>
+                            <p class="exp-desc">
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="exp-company-name"></p>
+                            <p class="exp-time-period"></p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position"></p>
+                            <p class="exp-desc">
+
+                            </p>
+                        </div>
+                    </div>
+                </section>
+                <!-- fim experiencia -->
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
